// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots QRCodeScanner Default 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "height": "100%",
      "width": "100%",
    }
  }
/>
`;

exports[`Storyshots QRCodeScanner With permission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "height": "100%",
      "width": "100%",
    }
  }
>
  <Mock$QRCodeScanner
    cameraProps={
      Object {
        "captureAudio": false,
      }
    }
    cameraStyle={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
    fadeIn={false}
    onRead={[Function]}
  />
</View>
`;
